WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311536
Flex items with different order values cause wrong baseline alignment
https://bugs.webkit.org/show_bug.cgi?id=311536
Summary
Flex items with different order values cause wrong baseline alignment
alan
Reported
2026-04-05 14:54:25 PDT
ssia
Attachments
[fast-cq]Patch
(18.84 KB, patch)
2026-04-05 15:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-05 15:03:31 PDT
Created
attachment 478930
[details]
[fast-cq]Patch
EWS
Comment 2
2026-04-07 08:18:13 PDT
Committed
310704@main
(e40d6ccd5ea2): <
https://commits.webkit.org/310704@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478930
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-04-07 08:19:12 PDT
<
rdar://problem/174241817
>
Sammy Gill
Comment 4
2026-04-16 12:15:15 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59286
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug