Source/WebCore/rendering/OrderIterator.cpp
@@ -55,11 +55,17 @@ RenderBox* OrderIterator::next()
         if (!m_currentChild) {
             if (m_orderValuesIterator == m_orderValues.end())
                 return nullptr;
-            
+
             if (!m_isReset) {
-                ++m_orderValuesIterator;
-                if (m_orderValuesIterator == m_orderValues.end())
-                    return nullptr;
+                if (m_reversedOrder) {
+                    if (m_orderValuesIterator == m_orderValues.begin())
+                        return nullptr;
+                    --m_orderValuesIterator;
+                } else {
+                    ++m_orderValuesIterator;
+                    if (m_orderValuesIterator == m_orderValues.end())
+                        return nullptr;
+                }
             } else
                 m_isReset = false;
             m_currentChild = m_reversedOrder ? m_containerBox.lastChildBox() : m_containerBox.firstChildBox();
@@ -67,14 +73,18 @@ RenderBox* OrderIterator::next()
             m_currentChild = m_reversedOrder ? m_currentChild->previousSiblingBox() : m_currentChild->nextSiblingBox();
         }
     } while (!m_currentChild || m_currentChild->style().order() != *m_orderValuesIterator);
-    
+
     return m_currentChild;
 }
 
 void OrderIterator::reset()
 {
     m_currentChild = nullptr;
-    m_orderValuesIterator = m_orderValues.begin();
+    if (m_reversedOrder && !m_orderValues.empty()) {
+        m_orderValuesIterator = m_orderValues.end();
+        --m_orderValuesIterator;
+    } else
+        m_orderValuesIterator = m_orderValues.begin();
     m_isReset = true;
 }
 
@@ -86,11 +96,6 @@ bool OrderIterator::shouldSkipChild(const RenderObject& child) const
 OrderIterator OrderIterator::reverse()
 {
     OrderIterator reversedItr(*this);
-    OrderValues reversedValues;
-
-    for (auto valuesItr = m_orderValues.rbegin(); valuesItr != m_orderValues.rend(); valuesItr++)
-        reversedValues.insert(*valuesItr);
-    reversedItr.m_orderValues = reversedValues;
     reversedItr.m_reversedOrder = !m_reversedOrder;
     reversedItr.reset();
 
